--- a/my-admin/package.json
+++ b/my-admin/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^7.0.1",
-    "@mui/material": "^7.0.1",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.7",
+    "@mui/joy": "^5.0.0-beta.52",
+    "@mui/material": "^7.3.7",
     "ra-supabase": "^3.5.2",
     "react": "^19.0.0",
     "react-admin": "^5.13.0",
